внес правки по замечанию

--- a/project/folder/inner/index.html
+++ b/project/folder/inner/index.html
@@ -12,7 +12,7 @@
         Incidunt eveniet accusantium accusamus et expedita nisi. Odio nemo delectus quaerat,
         sequi vero quo esse cumque ut libero est. Sit, expedita rerum?
     </p>
-    <img src="https://marepic.github.io/home-work/project/img/1.png" alt="абсолютный">
+    <img src="/home-work/project/img/1.png" alt="абсолютный">
     <img src="../../img/2.jpg" alt="относительный">
 
 </body>
